# FourTokenizersFourLanguages

./: .gitignore  README.md  notes.md
cpp/: CMakeLists.txt  dataset.cpp  dataset.hpp  main.cpp  pretokenizer.cpp  pretokenizer.hpp  tokenizer.cpp  tokenizer.hpp
go/: dataset.go  go.mod  go.sum  main.go  pretokenizer.go  tokenizer.go
python/: bpe.py  dataset.py  main.py  pretokenizer.py  requirements.txt  tokenizer.py
python/notebooks/: prototyping.ipynb
